fix: optimize playground rendering to prevent indicator jumping

--- a/packages/ui/_segmented-control.scss
+++ b/packages/ui/_segmented-control.scss
@@ -67,6 +67,5 @@
     &__number {
         color: var(--label-tertiary);
         @include caption-11-r();
-        margin-left: 2px;
     }
 }
